2008-11-06  Neal H. Walfield  <neal@gnu.org>

	* anonymous.c (fault): Handle the case where COUNT > 0.  Don't
	assume that storage has been allocated if INFO.DISCARDED is true.
	(advise): Interpret pager_advice_normal to mean to cleared
	discarded pages and to allocate unallocated pages.

2008-11-03  Neal H. Walfield  <neal@gnu.org>

	* headers.m4: Don't create an empty libhurd-mm/libhurd-mm.a.

2008-08-15  Neal H. Walfield  <neal@gnu.org>

	* storage.c (storage_free_): Deallocate the folio before updating
	the shadow capability.

2008-08-12  Neal H. Walfield  <neal@gnu.org>

	* storage.c (storage_low_mutex): Use
	PTHREAD_RECURSIVE_MUTEX_INITIALIZER_NP, not
	PTHREAD_MUTEX_RECURSIVE_INITIALIZER_NP.

2008-07-08  Neal H. Walfield  <neal@gnu.org>

	* as-lookup.c: Include <profile.h>, not "../viengoos/profile.h".

2008-07-04  Neal H. Walfield  <neal@gnu.org>

	* as-lookup.c: Don't include <pthread.h>.
	(as_rwlock): Don't define here.
	* as.c: Include <pthread.h>.
	(as_rwlock): Define.
	(as_rwlock_owner): Likewise.
	* as.h: Include <l4/types.h>.
	(as_lock): Check and set as_rwlock_owner appropriately.
	(as_lock_readonly): Likewise.
	(as_unlock): Likewise.
	* storage.c (do_serialize): New local variable.
	(storage_check_reserve_internal): If AS_RWLOCK_OWNER is non-zero,
	check if the caller has the AS_RWLOCK.  If so, return.  If
	DO_SERIALIZE is set or FREE_COUNT is less than
	FREE_PAGES_SERIALIZE, take the STORAGE_LOW_MUTEX.  If DO_SERIALIZE
	was not set, set it and remember that we set it and clear it after
	allocating a folio.

2008-07-01  Neal H. Walfield  <neal@gnu.org>

	* as-dump.c [RM_INTERN]: Include <md5.h>, "../viengoos/cap.h" and
	"../viengoos/activity.h".
	(do_walk) [RM_INTERN]: Print data pages' md5 sums as well.

2008-06-24  Neal H. Walfield  <neal@gnu.org>

	* madvise.c: New file.
	* Makefile.am (libhurd_mm_a_SOURCES): Add madvise.c.
	* pager.h (pager_advice_normal, pager_advice_random,
	pager_advice_sequential, pager_advice_willneed,